# rocscience-take-home-assignment

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: chat.py  router.py  sessions.py
app/core/: agent.py
app/db/: crud.py
app/schemas/: chat.py
app/utils/: config.py  logger.py  serializer.py
tests/unit/: test_chat_sse.py
