[project]
name = "rocscience-take-home-assignment"
version = "0.1.0"
description = "AI Chat Service — Rocscience Take-Home"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",               # includes Agents SDK in >=1.x
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "python-dotenv",
    "openai-agents>=0.10.5",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",                # async test client for FastAPI
    "ruff",                 # linter + formatter
    "pre-commit",           # git hooks
]

# ---------------------------------------------------------------------------
# Ruff — linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long — handled by formatter
    "B008", # do not perform function calls in default args (FastAPI Depends pattern)
]

[tool.ruff.lint.pydocstyle]
# Or "numpy" for example
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
